--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "dynamsoft-camera-enhancer": "^3.2.0",
     "solid-js": "^1.6.6"
   }
 }
