--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "dynamsoft-camera-enhancer": "^3.2.0",
+    "dynamsoft-javascript-barcode": "^9.6.2",
     "solid-js": "^1.6.6"
   }
 }
